Update Derivative Project - Option pricing and hedging.ipynb

--- a/Derivative Project - Option pricing and hedging.ipynb
+++ b/Derivative Project - Option pricing and hedging.ipynb
@@ -965,7 +965,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<u>Binomial Method vs Black & Scholes Method</u>\n",
+    "Binomial Method vs Black & Scholes Method\n",
     "\n",
     "Regarding the Binomial method with 10 steps we found a price of $0.593959 which is a little bit different from what we found with the Black & Scholes method. The difference is due to the number of steps that we have on the Binomial Model. Hence if the number of steps tend to + ∞ the price of the Binomial will tend to the Black & Scholes price. That worked just fine: with 500 steps and a value of $0.585965"
    ]
@@ -974,7 +974,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<u>Monte Carlo Method vs Black & Scholes Method</u>\n",
+    "Monte Carlo Method vs Black & Scholes Method\n",
     "\n",
     "According to the Monte Carlo Method with 300 000 iterations, we found a price of $0.5855 which is very close to the Black & Scholes Model. We can explain this by the fact the both model are the same and if we keep increasing the number of iteration, it will converge to the Black & Scholes price. (analytical solution of the expected value for B&S and empirical one for Monte Carlo simulation)"
    ]
@@ -983,7 +983,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<u>Black & Scholes Method vs Yahoo Finance</u>\n",
+    "Black & Scholes Method vs Yahoo Finance\n",
     "\n",
     "The $1.14 price from Yahoo finance differs from ours.\n",
     "According to the data that we found on Yahoo Finance, we can notice that there is a huge difference between the B&S Model and the data. We have assumptions that can explain the difference :\n",
