Update Derivative Project - Option pricing and hedging.ipynb

--- a/Derivative Project - Option pricing and hedging.ipynb
+++ b/Derivative Project - Option pricing and hedging.ipynb
@@ -2381,8 +2381,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\gamma_{Portfolio} + \\gamma_{Call} w_{1} + \\gamma_{Put} w_{2} = 0  $$\n",
-    "$$\\upsilon_{Portfolio} + \\upsilon_{Call} w_{1} + \\upsilon_{Put} w_{2} = 0   $$"
+    "$\\Gamma_{Portfolio} + \\Gamma_{Call} w_{1} + \\Gamma_{Put} w_{2} = 0  $\n",
+    "$\\upsilon_{Portfolio} + \\upsilon_{Call} w_{1} + \\upsilon_{Put} w_{2} = 0   $"
    ]
   },
   {
